# Computer-Vision-Cpp-ML

./: README.md
Computer_Vision/Cats_vs_Dog_Project/deep_learning/: data_loader.py  main.py  vgg_models.py
Computer_Vision/Cats_vs_Dog_Project/python_implementation/: main.py  utilities.py
Computer_Vision/OpenCV_miniprojects/: CMakeLists.txt  README.md  logistic_regression.xml  svm.xml
Computer_Vision/OpenCV_miniprojects/datasets/: diabetic_classification.txt
Computer_Vision/OpenCV_miniprojects/src/: Diabetic_Classification.hpp  Feature_Extraction_and_Matching.hpp  main.cpp
Computer_Vision/Revision_DIP_Linear_and_Softmax_Regression/: README.md
Computer_Vision/Revision_DIP_Linear_and_Softmax_Regression/machine_learning_basics/: generate_data.hpp  iris_softmax_regression.hpp  main.cpp  reading_data.hpp
Computer_Vision/Revision_DIP_Linear_and_Softmax_Regression/spatial_filtering/: histogram_utils.hpp  main.cpp  sharpening.hpp  smoothing.hpp
Computer_Vision/Revision_DIP_Linear_reg_and_Logistic_reg/: .Notes_on_Ideas_to_Implement.txt.swp  CMakeLists.txt  Notes_on_Ideas_to_Implement.txt  README.md
Computer_Vision/Revision_DIP_Linear_reg_and_Logistic_reg/machine_learning_basics/: Linear_regression_Model.hpp  information_about_data.txt  linear_regression_data.txt
Computer_Vision/Revision_DIP_Linear_reg_and_Logistic_reg/spatial_filtering/: blob_detection_using_LoG.hpp  main.cpp
ML_and_TS/1_IRIS_Classification/: Iris_softmax_regression.ipynb
ML_and_TS/2_LeNet5_Single_Digit_Classification/: Single_Digit_Classification.ipynb
